//plugins {
//    id 'java'
//    id 'org.springframework.boot' version '3.3.0'
//    id 'io.spring.dependency-management' version '1.1.5'
//}
//
//group = 'com.coursify'
//version = '0.0.1-SNAPSHOT'
//
//java {
//    toolchain {
//        languageVersion = JavaLanguageVersion.of(21)
//    }
//}
//
//configurations {
//    compileOnly {
//        extendsFrom annotationProcessor
//    }
//}
//
//repositories {
//    mavenCentral()
//}
//
//dependencies {
//
//    // ── Web ─────────────────────────────────────────────────────────────────
//    implementation 'org.springframework.boot:spring-boot-starter-web'
//
//    // ── Security ─────────────────────────────────────────────────────────────
//    implementation 'org.springframework.boot:spring-boot-starter-security'
//
//    // ── Data / JPA ───────────────────────────────────────────────────────────
//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//
//    // ── Validation ───────────────────────────────────────────────────────────
//    implementation 'org.springframework.boot:spring-boot-starter-validation'
//
//    // ── PostgreSQL ───────────────────────────────────────────────────────────
//    runtimeOnly 'org.postgresql:postgresql'
//
//    // ── JWT (jjwt) ───────────────────────────────────────────────────────────
//    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
//    runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.11.5'
//    runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.11.5'
//
//    // ── Lombok ───────────────────────────────────────────────────────────────
//    compileOnly    'org.projectlombok:lombok'
//    annotationProcessor 'org.projectlombok:lombok'
//
//    // ── Swagger / OpenAPI ────────────────────────────────────────────────────
//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
//
//    // ── Dev Tools ────────────────────────────────────────────────────────────
//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
//
//    // ── Test ─────────────────────────────────────────────────────────────────
//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    testImplementation 'org.springframework.security:spring-security-test'
//    testRuntimeOnly    'com.h2database:h2'
//    testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
//}
//
//tasks.named('test') {
//    useJUnitPlatform()
//}


plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.coursify'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ── Web ─────────────────────────────────────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // ── Security ─────────────────────────────────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // ── Data / JPA ───────────────────────────────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // ── Validation ───────────────────────────────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // ── Mail ─────────────────────────────────────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // ── PostgreSQL ───────────────────────────────────────────────────────────
    runtimeOnly 'org.postgresql:postgresql'

    // ── JWT (jjwt) ───────────────────────────────────────────────────────────
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // ── Lombok ───────────────────────────────────────────────────────────────
    compileOnly    'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ── Swagger / OpenAPI ────────────────────────────────────────────────────
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // ── Dev Tools ────────────────────────────────────────────────────────────
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // ── Test ─────────────────────────────────────────────────────────────────
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly    'com.h2database:h2'
    testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}